# digikey-api-v4

./: .gitignore  flake.nix  pyproject.toml  run.py
src/digikey_api_v4/: api.py  constants.py  models.py  utils.py
src/digikey_api_v4/swagger/: ProductSearch.json
tests/: conftest.py  test_product_search.py
