[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[project]
name = "digikey-api-v4"
version = "0.1.0"
description = "Python DigiKey API module"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bravado>=12.0.1",
    "click>=8.3.1",
    "requests>=2.33.1",
]

