[build-system]
requires = ["uv_build>=0.8.14,<0.9.0", "setuptools-scm"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[project]
name = "digikey-api-v4"
dynamic = ["version"]
description = "Python DigiKey API module"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["bravado>=12.0.1", "click>=8.3.1", "requests>=2.33.1"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
